# battery-lab

./: .gitattributes  .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/: .gitignore  build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: team.json
app/src/main/cpp/: CMakeLists.txt  root-checker.cpp  toolChecker.cpp  toolChecker.h
app/src/main/res/drawable/: ic_apps_24.xml  ic_beta_24dp.xml  ic_check_update_24dp.xml  ic_developer_24dp.xml  ic_github_24dp.xml  ic_group_work_24dp.xml  ic_launcher_foreground.xml  ic_premium_24.xml  ic_refresh_24dp.xml  ic_restore_24.xml  ic_script_24dp.xml  ic_settings_24.xml  ic_settings_kernel_24.xml  ic_sound_24dp.xml  ic_stop_the_service_when_the_charger_is_dc_24dp.xml  ic_terminal_24dp.xml  ic_vibration_24.xml  preference_list_divider_m3.xml
app/src/main/res/layout/: about_contributors_item.xml  about_team_item.xml  activity_main.xml  activity_premium.xml  card_view_design_kernel.xml  change_kernel_value_dialog.xml  charge_discharge_fragment.xml  contributors_dialog.xml  history_fragment.xml  history_recycler_list_item.xml  kernel_fragment.xml  premium_item.xml  shell_dialog.xml  show_script_dialog.xml  team_dialog.xml  toolbar.xml  tools_fragment.xml
app/src/main/res/menu/: history_menu.xml  kernel_menu.xml  main_menu.xml  navigation_menu.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-night/: colors.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+114 files in other folders)
